[package]
name = "passport-score-proxy"
version = "0.0.1"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
http = "1.1.0"
serde_json = "1.0.114"
worker = "0.0.18"

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
